# adventofcode

./: .gitignore  CMakeLists.txt  README.md
2023/: CMakeLists.txt
2023/1.trebuchet/: CMakeLists.txt  main.c
